--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
-  "name": "cra-template",
-  "version": "1.0.3",
+  "name": "@bence-toth/cra-template",
+  "version": "0.0.1",
   "keywords": [
     "react",
     "create-react-app",
     "template"
   ],
-  "description": "The base template for Create React App.",
+  "description": "A rich template for Create React App.",
   "main": "template.json",
   "repository": {
     "type": "git",
-    "url": "https://github.com/facebook/create-react-app.git",
-    "directory": "packages/cra-template"
+    "url": "https://github.com/bence-toth/cra-template.git"
   },
   "license": "MIT",
   "engines": {
     "node": ">=8"
   },
   "bugs": {
-    "url": "https://github.com/facebook/create-react-app/issues"
+    "url": "https://github.com/bence-toth/cra-template/issues"
   },
   "files": [
     "template",
