Made ESLint ignore the coverage folder

--- a/template/.eslintrc
+++ b/template/.eslintrc
@@ -1,5 +1,6 @@
 {
   "extends": ["@bence.a.toth/eslint-config"],
+  "ignorePatterns": ["coverage/"],
   "overrides": [
     {
       // Don't expect entry point to get imported.
