Added comments to .eslintrc

--- a/template/.eslintrc
+++ b/template/.eslintrc
@@ -3,17 +3,22 @@
   "ignorePatterns": ["coverage/"],
   "overrides": [
     {
-      // Don't expect entry point to get imported.
-      "files": ["src/index.js"],
+      // Don't expect entry point to be imported.
+      "files": [
+        "src/index.js"
+      ],
       "rules": {
         "import/no-unused-modules": 0,
         "react/jsx-filename-extension": 0
       }
     },
     {
-      // Don't expect test files to get imported.
+      // Don't expect test files to be imported.
       // Allow the usage of JSX in test files.
-      "files": ["*.test.js", "setupTests.js"],
+      "files": [
+        "*.test.js",
+        "setupTests.js"
+      ],
       "rules": {
         "import/no-unused-modules": 0,
         "import/no-unassigned-import": 0,
@@ -22,7 +27,9 @@
     },
     {
       // Disabled some rules for the service worker
-      "files": ["serviceWorker.js"],
+      "files": [
+        "serviceWorker.js"
+      ],
       "rules": {
         "no-param-reassign": 0,
         "fp/no-mutation": 0,
@@ -31,8 +38,10 @@
       }
     },
     {
-      // Don't expect config files to get imported.
-      "files": ["stylelint.config.js"],
+      // Don't expect config files to be imported.
+      "files": [
+        "stylelint.config.js"
+      ],
       "rules": {
         "import/no-unused-modules": 0
       }
