--- a/template/.eslintrc
+++ b/template/.eslintrc
@@ -49,6 +49,24 @@
       "rules": {
         "import/no-unused-modules": 0
       }
+    },
+    ,
+    {
+      // The cypress folder is somewhat special
+      "files": [
+        "cypress/**/*"
+      ],
+      "rules": {
+        "import/no-unassigned-import": 0,
+        "import/no-unused-modules": 0,
+        "jest/expect-expect": 0,
+        // "no-undef": 0,
+        "spaced-comment": [0, "always", {
+          "markers": [ // Allow triple-slash notation
+            "/"
+          ]
+        }]
+      }
     }
   ]
 }
