--- a/template/.github/workflows/nodejs.yml
+++ b/template/.github/workflows/nodejs.yml
@@ -18,7 +18,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install
     - run: npm run lint
-    - run: npm run test
+    - run: npm test
       env:
         CI: true
     - run: npm run cypress:ci
