Ignored node_modules and build by eslint

--- a/template/.eslintrc
+++ b/template/.eslintrc
@@ -3,7 +3,9 @@
     "@bence.a.toth/eslint-config"
   ],
   "ignorePatterns": [
-    "coverage/"
+    "coverage/",
+    "build/",
+    "node_modules/"
   ],
   "overrides": [
     {
