Fixed scope name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bence-toth/cra-template",
+  "name": "@bence.a.toth/cra-template",
   "version": "1.0.0",
   "keywords": [
     "react",
